Fixed the alignment of the checkbox in the modal per Paul's request. Also updated the styles so that the checkbox outside the modal is not displayed by default. The checkbox inside the modal will always display.

--- a/src/resources/postcss/tickets-v1.pcss
+++ b/src/resources/postcss/tickets-v1.pcss
@@ -1198,6 +1198,10 @@
 				}
 			}
 
+			.tribe-tickets-attendees-list-optout--wrapper {
+				display: none;
+			}
+
 			.tribe-tickets__item__quantity__add,
 			.tribe-tickets__item__quantity__remove {
 				display: none;
