--- a/src/resources/postcss/tickets/_block.pcss
+++ b/src/resources/postcss/tickets/_block.pcss
@@ -124,6 +124,7 @@
 	}
 
 	.tribe-tickets-attendees-list-optout--wrapper {
+		display: none;
 		-ms-grid-column: 1;
 		-ms-grid-column-span: 3;
 		grid-column: 1/span all;
